src/test/deca/context/invalid/provided/test_print_condition.deca
//test types intérieurs à print
{
    boolean zero = false;
    println(zero);
}